--- a/store/static/store/main.css
+++ b/store/static/store/main.css
@@ -1,5 +1,5 @@
 body {
-  color: black;
+  color: white;
   padding: 0;
   margin: 0;
   background-image: linear-gradient(-90deg, rgba(112,34,34),black);
@@ -9,7 +9,7 @@ body {
   margin: 0;
   padding: 0;/*
   overflow: hidden;*/
-  background-color: rgba(5,5,5,0.8);
+  background-color: rgba(155,125,135,0.8);
   font-family: 'Carrois Gothic', sans-serif;
   position: fixed;
   width: 100vw;
@@ -51,7 +51,7 @@ li a, .menu_item {
 }
 
 li a:hover, .dropdown:hover .menu_item {
-  background-color: red;
+  background-color: lightblue;
 }
 
 li.dropdown {
@@ -61,7 +61,7 @@ li.dropdown {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
+  background-color: #ff2ef1;
   min-width: 50px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
@@ -88,16 +88,6 @@ li.dropdown {
 }
 #Account {
 
-}
-
-/* Dropdown Button */
-.chatbtn {
-  background-color: rgba(172, 32, 45, 0.8);
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
 }
 
 /* Dropdown button on hover & focus */
