--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -32,7 +32,13 @@
     </div>
   </li>
   <li class="dropdown menu_right" id="Account">
-    <a href="signup_form.html">Register as Teacher</a>
+    {% if user.is_authenticated %}
+      <a href="{% url 'logout'%}">logout</a>
+      <a href="{% url 'profile'%}">profile</a>
+    {% else %}
+      <a href="{% url 'register'%}">Register as Teacher</a>
+      <a href="{% url 'login'%}">login</a>
+    {% endif %}
   </li>
   <li class="menu_right">
     <div>
@@ -43,6 +49,13 @@
  </ul>
 
 <div id="main">
+  {% if messages %}
+    {% for message in messages %}
+      <div class = "alert alert-{{ message.tags }}">
+        {{ message }}
+      </div>
+    {% endfor %}
+  {% endif %}
   {% block content %}{% endblock %}
 </div>
 </body>
