some general colours

--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -12,7 +12,7 @@
 <body>
 <ul id="menu">
   <div id="logo_holder">
-    <img id="logo" src="{% static 'store/brainstorm_logo.jpg' %}">
+    <img id="logo" src="{% static 'store/brainstorm_logo.gif' %}">
   </div>
     <li class="dropdown menu_left">
     <a href="javascript:void(0)" class="menu_item" id="Teachers">Look for Teachers▼</a>
