--- a/store/static/store/main.css
+++ b/store/static/store/main.css
@@ -1,15 +1,15 @@
 body {
-  color: white;
+  color: black;
   padding: 0;
   margin: 0;
-  background-image: linear-gradient(-90deg, rgba(112,34,34),black);
+  background-image: linear-gradient(-90deg, rgba(200,200,255),white);
 }
 #menu {
   list-style-type: cambodian;
   margin: 0;
   padding: 0;/*
   overflow: hidden;*/
-  background-color: rgba(155,125,135,0.8);
+  background-color: rgba(210,255,3,0.8);
   font-family: 'Carrois Gothic', sans-serif;
   position: fixed;
   width: 100vw;
@@ -37,21 +37,18 @@ body {
  #logo_holder {
   float: left;
   padding-right: 20px;
- /*
- text-align: center;
- background-color: black;*/
 }
 
 li a, .menu_item {
   display: inline-block;
-  color: white;
+  color: black;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
 }
 
 li a:hover, .dropdown:hover .menu_item {
-  background-color: lightblue;
+  background-color: whitesmoke;
 }
 
 li.dropdown {
@@ -61,9 +58,9 @@ li.dropdown {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #ff2ef1;
+  background-color: whitesmoke;
   min-width: 50px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px lightseagreen;
   z-index: 1;
 }
 
@@ -75,7 +72,7 @@ li.dropdown {
   text-align: left;
 }
 
-.dropdown-content a:hover {background-color: #f1f1f1;}
+.dropdown-content a:hover {background-color: lightskyblue;}
 
 .dropdown:hover .dropdown-content {
   display: block;
@@ -144,13 +141,32 @@ li.dropdown {
 
 #main {
   padding-top: 60px;
-  color: rgb(200,200,200);
+  color: rgb(39, 41, 65);
   font-family: 'Athiti', sans-serif;
 }
 #main h1 {
-  text-decoration: underline;
+
 }
 
 #main input {
   margin: 10px;
+}
+
+#main btn{
+ display:inline-block;
+ padding:0.3em 1.2em;
+ margin:0 0.1em 0.1em 0;
+ border:0.16em solid rgba(255,255,255,0);
+ border-radius:2em;
+ box-sizing: border-box;
+ text-decoration:none;
+ font-family:'Roboto',sans-serif;
+ font-weight:300;
+ color:#FFFFFF;
+ text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+ text-align:center;
+ transition: all 0.2s;
+}
+#main btn: hover{
+ border-color: rgba(255,255,255,1);
 }
