--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -34,7 +34,9 @@
   <li class="dropdown menu_right" id="Account">
     {% if user.is_authenticated %}
       <a href="{% url 'logout'%}">logout</a>
-      <a href="{% url 'profile'%}">profile</a>
+      <a href="{% url 'profile'%}"> {{ user.username }} </a>
+      <img id="profile_icon" src="{{ user.profile.image.url }}">
+      
     {% else %}
       <a href="{% url 'register'%}">Register as Teacher</a>
       <a href="{% url 'login'%}">login</a>
