--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,10 +1,10 @@
 {% extends "store/base.html" %}
 {% block content %}
     <div>
-        <img src="{{ user.profile.image.url }}">
-        <h2>{{ user.username }}</h2>
-        <p> {{ user.email }}</p>
-        <p> {{ user.profile.gender }}</p>
-        <p> {{ user.profile.bio }}</p>
+        <img id="profile_pic" src="{{ user.profile.image.url }}">
+        <h1>{{ user.username }}</h1>
+        <p> Email: {{ user.email }}</p>
+        <p> Gender: {{ user.profile.gender }}</p>
+        <p> Bio: {{ user.profile.bio }}</p>
     </div>
 {% endblock content %}
