--- a/store/static/store/main.css
+++ b/store/static/store/main.css
@@ -3,13 +3,17 @@ body {
   padding: 0;
   margin: 0;
   background-image: linear-gradient(180deg, rgb(221, 223, 142),rgb(194, 183, 233));
+  height: 100%;
+  margin: 0;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 #menu {
   list-style-type: cambodian;
   margin: 0;
   padding: 0;/*
   overflow: hidden;*/
-  background-color: rgba(210,255,3,0.8);
+  background-color: rgb(239, 247, 134);
   font-family: 'Carrois Gothic', sans-serif;
   position: fixed;
   width: 100vw;
@@ -17,6 +21,7 @@ body {
   right: 50%;
   margin-left: -50vw;
   margin-right: -50vw;
+  border-bottom: solid;
 }
 
 .menu_left {
@@ -49,6 +54,7 @@ li a, .menu_item {
 
 li a:hover, .dropdown:hover .menu_item {
   background-color: whitesmoke;
+  box-shadow: 0px 8px 16px 0px rgb(61, 127, 250);
 }
 
 li.dropdown {
@@ -60,7 +66,7 @@ li.dropdown {
   position: absolute;
   background-color: whitesmoke;
   min-width: 50px;
-  box-shadow: 0px 8px 16px 0px lightseagreen;
+  box-shadow: 0px 8px 16px 0px  rgb(61, 127, 250);;
   z-index: 1;
 }
 
@@ -146,7 +152,9 @@ li.dropdown {
   margin-right: 15%;
   padding-left: 5%;
   padding-right: 5%;
-  padding-top: 5%; 
+  padding-top: 6%;
+  border-style: solid;
+  border-width: medium;
   background-image: linear-gradient(-135deg, rgba(200,200,255),white);
 }
 
