--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,10 +1,25 @@
 {% extends "store/base.html" %}
 {% block content %}
     <div>
-        <img id="profile_pic" src="{{ user.profile.image.url }}">
-        <h1>{{ user.username }}</h1>
-        <p> Email: {{ user.email }}</p>
-        <p> Gender: {{ user.profile.gender }}</p>
-        <p> Bio: {{ user.profile.bio }}</p>
+        <div>
+            <img id="profile_pic" src="{{ user.profile.image.url }}">
+            <h1>{{ user.username }}</h1>
+            <p> Email: {{ user.email }}</p>
+            <p> Gender: {{ user.profile.gender }}</p>
+            <p> Bio: {{ user.profile.bio }}</p>
+        </div>
+        <div>
+            <form method="POST" enctype="multipart/form-data">
+                {% csrf_token %}
+                <fieldset>
+                    <legend>Edit Profile</legend>
+                    {{ u_form.as_p }}
+                    {{ p_form.as_p }}
+                </fieldset>
+                <div>
+                    <button type= "submit">Update</button>
+                </div>
+            </form>
+        <div>
     </div>
 {% endblock content %}
