--- a/store/static/store/main.css
+++ b/store/static/store/main.css
@@ -2,10 +2,10 @@ body {
   color: black;
   padding: 0;
   margin: 0;
-  background-image: linear-gradient(180deg, rgb(221, 223, 142),rgb(194, 183, 233));
+  background-image: url(background.jpg);
   height: 100%;
   margin: 0;
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   background-attachment: fixed;
 }
 #menu {
@@ -13,7 +13,7 @@ body {
   margin: 0;
   padding: 0;/*
   overflow: hidden;*/
-  background-color: rgb(239, 247, 134);
+  background-color: rgb(185, 216, 245);
   font-family: 'Carrois Gothic', sans-serif;
   position: fixed;
   width: 100vw;
@@ -155,7 +155,8 @@ li.dropdown {
   padding-top: 6%;
   border-style: solid;
   border-width: medium;
-  background-image: linear-gradient(-135deg, rgba(200,200,255),white);
+  background-color: white;
+  /* background-image: linear-gradient(-135deg, rgba(200,200,255),white); */
 }
 
 #profile_pic {
