--- a/store/static/store/main.css
+++ b/store/static/store/main.css
@@ -13,7 +13,7 @@ body {
   margin: 0;
   padding: 0;/*
   overflow: hidden;*/
-  background-color: rgb(185, 216, 245);
+  background-color: rgb(255, 255, 255);
   font-family: 'Carrois Gothic', sans-serif;
   position: fixed;
   width: 100vw;
@@ -153,6 +153,7 @@ li.dropdown {
   padding-left: 5%;
   padding-right: 5%;
   padding-top: 6%;
+  padding-bottom: 5%;
   border-style: solid;
   border-width: medium;
   background-color: white;
