--- a/store/static/store/main.css
+++ b/store/static/store/main.css
@@ -2,158 +2,98 @@ body {
   color: black;
   padding: 0;
   margin: 0;
-  background-image: url(background.jpg);
+  background-color: white;
   height: 100%;
   margin: 0;
-  background-repeat: repeat;
   background-attachment: fixed;
 }
-#menu {
-  list-style-type: cambodian;
-  margin: 0;
-  padding: 0;/*
-  overflow: hidden;*/
+/* Add a black background color to the top navigation */
+.topnav {
+  overflow: hidden;
   background-color: rgb(255, 255, 255);
   font-family: 'Carrois Gothic', sans-serif;
-  position: fixed;
-  width: 100vw;
-  left: 50%;
-  right: 50%;
-  margin-left: -50vw;
-  margin-right: -50vw;
   border-bottom: solid;
 }
 
-.menu_left {
+/* Style the links inside the navigation bar */
+.topnav a {
   float: left;
-}
-
-.menu_right {
-  padding-right: 20px;
-  padding-left: 20px;
-  float: right;
-}
-
-#logo {
-  padding-left: 20px;
-  height: 42px;
- }
-
- #logo_holder {
-  float: left;
-  padding-right: 20px;
-}
-
-li a, .menu_item {
-  display: inline-block;
+  display: block;
   color: black;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
+  font-size: 17px;
 }
 
-li a:hover, .dropdown:hover .menu_item {
-  background-color: whitesmoke;
-  box-shadow: 0px 8px 16px 0px rgb(61, 127, 250);
+.topnav .left {
+  float: left;
 }
 
-li.dropdown {
-  display: inline-block;
+.topnav .right {
+  float: right;
 }
 
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: whitesmoke;
-  min-width: 50px;
-  box-shadow: 0px 8px 16px 0px  rgb(61, 127, 250);;
-  z-index: 1;
+.topnav input[type=text] {
+  float: right;
+  padding: 6px;
+  border: 1px solid #ccc;
+  margin-top: 8px;
+  margin-right: 16px;
+  font-size: 17px;
 }
-
-.dropdown-content a {
+/* Change the color of links on hover */
+.topnav .select:hover {
+  background-color: rgb(0, 225, 255);
   color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
 }
 
-.dropdown-content a:hover {background-color: lightskyblue;}
-
-.dropdown:hover .dropdown-content {
-  display: block;
+.topnav .select:active {
+  background-color: rgb(255, 251, 0);
+  color: black;
 }
-#Public {
-  
+
+
+/* Hide the link that should open and close the topnav on small screens */
+.topnav .icon {
+  display: none;
+}
+
+/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav input[type=text] {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
   }
-#Private {
-
-}
-#Account {
-
 }
 
-/* Dropdown button on hover & focus */
-.chatbtn:hover, .chatbtn:focus {
-  background-color: #2980B9;
-}
-
-/* The container <div> - needed to position the dropdown content */
-#chats { 
-  position:fixed;
-  bottom:10px;
-  right:30px;
-  display: inline-block;
-  font-family: 'Carrois Gothic', sans-serif;
-}
-
-/* Dropdown Content (Hidden by Default) */
-.chat-content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-/* Links inside the dropdown */
-.chat-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-/* Change color of dropdown links on hover */
-.chat-content a:hover {background-color: #ddd}
-
-/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-.show {
-  display:block;
-  transform: translate(0, -130%);
-}
-#search_bar {
-  float: right;
-  border: none;
-  font-size: 19px;
-}
-
-#search_btn {
-  float: right;
-  border: none;
-  background-color: rgba(0,0,0,0);
+/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .topnav .responsive input[type=text] {
+    width: 30%;
+    float: none;
+    display: block;
+  }
 }
 
 #main {
   color: rgb(39, 41, 65);
   font-family: 'Athiti', sans-serif;
-  margin-left: 15%;
-  margin-right: 15%;
-  padding-left: 5%;
-  padding-right: 5%;
-  padding-top: 6%;
-  padding-bottom: 5%;
+  margin: 1.5%;
+  padding: 2%;
   border-style: solid;
   border-width: medium;
   background-color: white;
