--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -5,53 +5,33 @@
 <title>
   Bra!nstorm
 </title>
+<script type="text/javascript" src="../../static/store/main.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Athiti|Carrois+Gothic|Podkova|Sarabun&display=swap" rel="stylesheet">
 <link href="{% static 'store/main.css' %}"  rel="stylesheet" type="text/css">
 <head>
 </head> 
 <body>
-<ul id="menu">
-  <div id="logo_holder">
-    <a href="{% url 'store-home' %}">
-      <img id="logo" src="{% static 'store/brainstorm_logo.gif' %}">
-    </a>
-  </div>
-    <li class="dropdown menu_left">
-    <a href="javascript:void(0)" class="menu_item" id="Teachers">Look for Teachers▼</a>
-    <div class="dropdown-content">
-      <a href="#">Popular</a>
-      <a href="#">Cheapest</a>
-      <a href="#">Cutest</a>
-      <a href="#">Most experienced</a>
-    </div>
-  </li>
-  <li class="dropdown menu_left">
-    <a href="javascript:void(0)" class="menu_item" id="Students">Look for Students▼</a>
-    <div class="dropdown-content">
-      <a href="#">Underage</a>
-      <a href="#">Loli</a>
-      <a href="#">Waifu</a>
-    </div>
-  </li>
-  <li class="dropdown menu_right" id="Account">
-    {% if user.is_authenticated %}
-      <a href="{% url 'logout'%}">logout</a>
-      <a href="{% url 'profile'%}"> {{ user.username }} </a>
-      <img id="profile_icon" src="{{ user.profile.image.url }}">
-      
+  <div class="topnav" id="myTopnav">
+  <a style="padding-top: 7px;" class="left">
+    <img src="../../static/store/brainstorm_logo.gif" height="30px">
+  </a> 
+  <a href="{% url 'store-home' %}" class="left select">Home</a>
+  <a href="{% url 'store-about' %}" class="left select">About</a>
+  {% if user.is_authenticated %}
+      <a href="{% url 'logout'%}" class="right select">logout</a>
+      <a href="{% url 'profile'%}"  style="padding-top: 7px;" class="right">  
+        <img id="profile_icon" src="{{ user.profile.image.url }}" height="30px">
+      </a>
     {% else %}
-      <a href="{% url 'register'%}">Register as Teacher</a>
-      <a href="{% url 'login'%}">login</a>
+      <a href="{% url 'register'%}" class="right select">Register as Teacher</a>
+      <a href="{% url 'login'%}" class="right select">login</a>
     {% endif %}
-  </li>
-  <li class="menu_right">
-    <div>
-      <button id="search_btn"><img src="{% static 'store/search_icon.gif' %}" width="20px"></button>
-      <input id="search_bar" type="text" placeholder=" Search...">
-    </div>
-  </li>
- </ul>
-
+  <input type="text" placeholder="Search.." class="right">
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <img src="../../static/store/menu_icon.gif" width="20px">
+  </a>
+</div>
+  
 <div id="main">
   {% if messages %}
     {% for message in messages %}
