--- a/store/templates/store/post_form.html
+++ b/store/templates/store/post_form.html
@@ -1,15 +1,15 @@
 {% extends "store/base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
-    <div>
+    <div class="content-section">
         <form method="POST">
             {% csrf_token %}
-            <fieldset>
-                <legend>Lesson Package</legend>
+            <fieldset class="form-group">
+                <legend class="border-bottom mb-4">Lesson Package</legend>
                 {{ form|crispy }}
             </fieldset>
-            <div>
-                <button type= "submit">Create!</button>
+            <div class="form-group">
+                <button class="btn btn-outline-info" type="submit">Create!</button>
             </div>
         </form>        
     </div>
