--- a/store/static/store/main.css
+++ b/store/static/store/main.css
@@ -8,11 +8,14 @@ body {
   background-attachment: fixed;
 }
 /* Add a black background color to the top navigation */
+#nav_bar {
+  border-bottom: solid;
+}
+
 .topnav {
   overflow: hidden;
   background-color: rgb(255, 255, 255);
   font-family: 'Carrois Gothic', sans-serif;
-  border-bottom: solid;
 }
 
 /* Style the links inside the navigation bar */
@@ -89,6 +92,57 @@ body {
   }
 }
 
+/* Style The Dropdown Button */
+.dropbtn {
+  background-color: white;
+  color: rgb(65, 0, 168);
+  border-bottom: solid black;
+  padding: 0px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+ border-bottom: solid;  
+ float: left;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+  max-height: 200px;
+  overflow: auto;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+  text-decoration: underline; 
+}
+
 #main {
   color: rgb(39, 41, 65);
   font-family: 'Athiti', sans-serif;
@@ -118,3 +172,54 @@ body {
   bottom: 10px;
 }
 
+.brk-btn, #main button {
+  position: relative;
+  background: none;
+  color: rgb(16, 197, 230);
+  text-transform: uppercase;
+  text-decoration: none;
+  border: 0.2em solid rgb(16, 197, 230);
+  padding: 0.5em 1em;
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.brk-btn::before, #main button::before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 10%;
+  background-color: white;
+  height: 0.3em;
+  right: 20%;
+  top: -0.21em;
+  transform: skewX(-45deg);
+  -webkit-transition: all 0.45s cubic-bezier(0.86, 0, 0.07, 1);
+  transition: all 0.45s cubic-bezier(0.86, 0, 0.07, 1);
+}
+.brk-btn::after, #main button::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 10%;
+  background-color: white;
+  height: 0.3em;
+  left: 20%;
+  bottom: -0.25em;
+  transform: skewX(45deg);
+  -webkit-transition: all 0.45 cubic-bezier(0.86, 0, 0.07, 1);
+  transition: all 0.45s cubic-bezier(0.86, 0, 0.07, 1);
+}
+.brk-btn:hover::before, #main button:hover::before {
+  right: 80%;
+  }
+.brk-btn:hover::after, #main button:hover::after {
+  left: 80%;
+}
+.brk-btn:hover, #main button:hover {
+  color: white;
+  background-color: rgb(16, 197, 230);
+  /* border: 0.2em solid black; */
+}
