--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -100,7 +100,7 @@
               <!--Card content-->
               <div class="card-body text-left">
                 <!--Category & Title-->
-                <a href="" >
+                <a href="" class="grey-text">
                   <h5> {{ post.author }}</h5>
                 </a>
                 <h5>
