updated detail view

--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -116,9 +116,9 @@
                   <strong> S${{ post.price }}</strong>
                 </h6>
 
-                <h6>
+                <small class="text-muted">
                    {{ post.date_posted|date:'d F y'}}
-                </h6>
+                </small>
 
               </div>
               <!--Card content-->
