Implemented delete and update view
Delete and update view unable to load static "brainstorm" logo

--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -105,7 +105,7 @@
                 </a>
                 <h5>
                   <strong>
-                    <a href="" class="dark-grey-text"> {{ post.title }} 
+                    <a href="{% url 'post-detail' post.id %}" class="dark-grey-text"> {{ post.title }} 
                       <span class="badge badge-pill danger-color">NEW</span>
                     
                     </a>
