--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -34,42 +34,43 @@
         <img src="../../static/store/menu_icon.gif" width="20px">
       </a>
     </div>
-    <div class="dropdown">
-      <button class="dropbtn">Level</button>
-      <div class="dropdown-content">
-        <a href="#">Lower Primary</a>
-        <a href="#">Upper Primary</a>
-        <a href="#">Lower Secondary</a>
-        <a href="#">Upper Secondary</a>
-        <a href="#">L</a>
-        <a href="#">Link 3</a>
-        <a href="#">Link 1</a>
-        <a href="#">Link 2</a>
-        <a href="#">Link 3</a>
-        <a href="#">Link 1</a>
-        <a href="#">Link 2</a>
-        <a href="#">Link 3</a>
-      </div>
-    </div>
+    <div class="nav2">
       <div class="dropdown">
-      <button class="dropbtn">Courses</button>
-      <div class="dropdown-content">
-        <a href="#">Bible studies</a>
-        <a href="#">Crucification</a>
-        <a href="#">Prostitution</a>
-        <a href="#">Li</a>
-        <a href="#">Link 2</a>
-        <a href="#">Link 3</a>
-        <a href="#">Link 1</a>
-        <a href="#">Link 2</a>
-        <a href="#">Link 3</a>
-        <a href="#">Link 1</a>
-        <a href="#">Link 2</a>
-        <a href="#">Link 3</a>
+        <button class="dropbtn">Level</button>
+        <div class="dropdown-content">
+          <a href="#">Lower Primary</a>
+          <a href="#">Upper Primary</a>
+          <a href="#">Lower Secondary</a>
+          <a href="#">Upper Secondary</a>
+          <a href="#">L</a>
+          <a href="#">Link 3</a>
+          <a href="#">Link 1</a>
+          <a href="#">Link 2</a>
+          <a href="#">Link 3</a>
+          <a href="#">Link 1</a>
+          <a href="#">Link 2</a>
+          <a href="#">Link 3</a>
+        </div>
       </div>
+      <div class="dropdown">
+        <button class="dropbtn">Courses</button>
+        <div class="dropdown-content">
+          <a href="#">Bible studies</a>
+          <a href="#">Crucification</a>
+          <a href="#">Prostitution</a>
+          <a href="#">Li</a>
+          <a href="#">Link 2</a>
+          <a href="#">Link 3</a>
+          <a href="#">Link 1</a>
+          <a href="#">Link 2</a>
+          <a href="#">Link 3</a>
+          <a href="#">Link 1</a>
+          <a href="#">Link 2</a>
+          <a href="#">Link 3</a>
+        </div>
       </div>
-      <button class="brk-btn">GO</button>
-
+      <button class="go">GO</button>
+    </div>
 <div id="main">
   {% if messages %}
     {% for message in messages %}
