--- a/store/static/store/main.css
+++ b/store/static/store/main.css
@@ -14,6 +14,7 @@ body {
   position: fixed;
   width: 100%;
   background-color: white;
+  z-index: 999999;
 }
 
 .topnav {
@@ -88,11 +89,6 @@ body {
     display: block;
     text-align: left;
   }
-  .topnav .responsive input[type=text] {
-    width: 30%;
-    float: none;
-    display: block;
-  }
 }
 
 .nav2 {
@@ -161,6 +157,7 @@ body {
 
 
 #main {
+  z-index: -1;
   color: rgb(39, 41, 65);
   font-family: 'Athiti', sans-serif;
   margin: 1.5%;
