--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -74,61 +74,47 @@
 
       </nav>
       <!--/.Navbar-->
-
-      <!--Section: Products v.3-->
-      {% for post in post %}
+      
+      
       <section class="text-center mb-4">
-
-        <!--Grid row-->
+        <div class="row">    
+        {% for post in post %}      
         
-
-          <!--Grid column-->
-          <div class="col-lg-3 col-md-6 mb-4">
-
-            <!--Card-->
-            <div class="card">
-
-              <!--Card image-->
+          <div class="col-lg-3 col-md-6 mb-4">            
+            <div class="card">            
               <div class="view overlay">
                 <img id="profile_pic" src="{{ post.author.profile.image.url }}" class="card-img-top" alt="">
                 <a>
                   <div class="mask rgba-white-slight"></div>
                 </a>
-              </div>
-              <!--Card image-->              
-             
-              <!--Card content-->
-              <div class="card-body text-left">
-                <!--Category & Title-->
+              </div>                                    
+              <div class="card-body text-left">                
                 <a href="" class="grey-text">
                   <h5> {{ post.author }}</h5>
                 </a>
                 <h5>
                   <strong>
                     <a href="{% url 'post-detail' post.id %}" class="dark-grey-text"> {{ post.title }} 
-                      <span class="badge badge-pill danger-color">NEW</span>
-                    
+                      <span class="badge badge-pill danger-color">NEW
+                      </span> 
                     </a>
                   </strong>
                 </h5>
-
                 <h6>
-                  <strong> S${{ post.price }}</strong>
+                  <strong>S${{ post.price }}
+                  </strong>
                 </h6>
-
                 <small class="text-muted">
                    {{ post.date_posted|date:'d F y'}}
                 </small>
-
-              </div>
-              <!--Card content-->
-
-            </div>
-            <!--Card-->
-
-          </div>
-          <!--Grid column-->
-          {% endfor %}
+              </div>            
+            </div>            
+          </div>          
+        
+        {% endfor %}
+        </div>
+      </section>
+    
    
     {% endif %}
 {% endblock content %}
