Included "New Post" button when user logs in
Minor changes:
1. Updated about page
2. Updated home page when logged in
3. Included "New Post" button when user logs in

--- a/store/templates/store/about.html
+++ b/store/templates/store/about.html
@@ -1,9 +1,25 @@
+{% extends "store/base.html" %}
+{% block content %}
+
 <!DOCTYPE html>
 <html>
 <head>
 	
 </head>
 <body>
-	<h1>Store about!</h1>
+	 <div>
+	    <p>
+	        Brainstorm is a platform for teachers to design lessons, create quizes, 
+	        record screen-cast, upload learning materials and much more! 
+	    </p> 
+	    <p>
+	        Join today as a teacher and enjoy our user-friendly interface! 
+	    </p>
+	    <p>
+	        Or, Sign up now as a student to enjoy carefully crafted lessons by our teachers!
+	    </p>
+	</div>
 </body>
 </html>
+
+{% endblock %}
