--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -68,6 +68,12 @@
   </a>
 </div>
       </div>
+      <div class="panel">
+          <button>Random Finds</button>
+          <button>My Subscription</button>
+          <button>My Content</button>
+      </div>
+      <p style="float: none;"></p>
       <div id="main" >
       <section class="text-center mb-4">
         <div class="row">    
