--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,6 +1,6 @@
 {% extends "store/base.html" %}
 {% block content %}
-    <div>
+    <div id="main">
         <div>
             <img id="profile_pic" src="{{ user.profile.image.url }}">
             <h1>{{ user.username }}</h1>
