--- a/users/templates/users/logout.html
+++ b/users/templates/users/logout.html
@@ -1,9 +1,11 @@
 {% extends "store/base.html" %}
 {% block content %}
+<div id="main">
 <h1>you have been logged out</h1>
   <div>
     <small>
         <a href="{% url 'login' %}">login</a>
     </small>
+   </div>
    </div>
 {% endblock content %}
