--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,6 +1,6 @@
 {% extends "store/base.html" %}
 {% block content %}
-    <div>
+    <div id="main">
         <form method="POST">
             {% csrf_token %}
             <fieldset>
