--- a/store/templates/store/about.html
+++ b/store/templates/store/about.html
@@ -1,6 +1,6 @@
 {% extends "store/base.html" %}
 {% block content %}
-<div>
+<div id="main">
         <p>
             Brainstorm is a platform for teachers to design lessons, create quizes, 
             record screen-cast, upload learning materials and much more! 
