--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -6,7 +6,7 @@
   Bra!nstorm
 </title>
 <script type="text/javascript" src="../../static/store/main.js"></script>
-<link href="https://fonts.googleapis.com/css?family=Athiti|Carrois+Gothic|Podkova|Sarabun&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Athiti|Carrois+Gothic|Podkova|Sarabun&display=swap|Arimo&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
@@ -32,10 +32,15 @@
       <a href="{% url 'register'%}" class="right select">Register</a>
       <a href="{% url 'login'%}" class="right select">Login</a>
     {% endif %}
-  <input type="text" placeholder="Search.." class="right">
-  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <img src="/static/store/menu_icon.gif" width="20px">
   </a>
+  <div id="search">
+    <button id="search_holder">
+    <img src="/static/store/search_icon.gif" id="search_icon"></button>
+    <input type="text" placeholder="" class="right">
+  </div>
+  
 </div>
   <div class="nav2">
     <select class="select-css">
