--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -69,11 +69,20 @@
 </div>
       </div>
       <div class="panel">
-          <button>Random Finds</button>
-          <button>My Subscription</button>
-          <button>My Content</button>
+          <button>
+            <img src="/static/store/random.gif" alt="">
+            Random Finds
+          </button>
+          <button>
+            <img src="/static/store/Subscription.gif" alt="">
+            My Subscription
+          </button>
+          <button>
+            <img src="/static/store/content.gif" alt="">
+            My Content
+          </button>
       </div>
-      <p style="float: none;"></p>
+      <p style="padding: 20px;"></p>
       <div id="main" >
       <section class="text-center mb-4">
         <div class="row">    
