--- a/store/static/store/main.css
+++ b/store/static/store/main.css
@@ -2,7 +2,7 @@ body {
   color: black;
   padding: 0;
   margin: 0;
-  background-color: white;
+  background-color: rgb(239, 248, 255);
   height: 100%;
   margin: 0;
   background-attachment: fixed;
@@ -72,13 +72,11 @@ body {
 }
 /* Change the color of links on hover */
 .topnav .select:hover {
-  background-color: rgb(0, 225, 255);
-  color: black;
+   color: rgb(16, 197, 230);
 }
 
 .topnav .select:active {
-  background-color: rgb(255, 251, 0);
-  color: black;
+   color: rgb(111, 0, 155);
 }
 
 
@@ -179,14 +177,15 @@ body {
 
 #main {
   z-index: -1;
-  color: rgb(39, 41, 65);
+  color: rgb(163, 169, 241);
   font-family: 'Athiti', sans-serif;
   margin-top: 0%;
   font-size: 15pt;
+  margin-left: 10%;
+  margin-right: 10%;
   padding: 15px;
   padding-top: 100px;
-  background-color: white;
-  /* background-image: linear-gradient(-135deg, rgba(200,200,255),white); */
+   /* background-image: linear-gradient(-135deg, rgba(200,200,255),white); */
 }
 
 #profile_pic {
@@ -290,7 +289,9 @@ body {
 .panel button{
   /* font-family: 'Arimo', sans-serif; */
   float: left;
-  width: 33.3%;
+  width: 23.3%;
+  margin-right: 5%;
+  margin-left: 5%;
   background-color: white;
   display: block;
   color: black;
@@ -310,7 +311,54 @@ body {
   margin-top: -4px;
   width: 25px;
 }
-.panel button:focus{
-  color: rgb(16, 197, 230);
-  text-decoration: underline;
+
+#course_card img {
+  width: 200px;
+  height: 120px;
+}
+
+#course_card {
+  background-color: white;
+  padding-left: 10px;
+  padding-right: 10px;
+  height: 325px;
+  width: 200px;
+  border: solid 1pt rgb(0, 0, 0);
+  box-shadow: #231;
+  text-align: left;
+  color: black;
+  border-radius: 12pt;
+  overflow: hidden;
+}
+
+#course_card .title{
+  font-size: 12pt;
+}
+
+#course_card .price {
+  font-size: 15pt;
+  position: absolute;
+  bottom: 10px;
+  right: 45px;
+}
+
+#course_card .date {
+  padding-top: 20px;
+  float: left;
+  position: absolute;
+  bottom: 10px;
+}
+
+#course_card .author{
+  color: grey;
+  font-size: 11pt;
+}
+
+.checked {
+  color: orange;
+}
+
+.rating {
+  position: absolute;
+  bottom: 40px;
 }
