--- a/store/templates/store/upload.html
+++ b/store/templates/store/upload.html
@@ -6,5 +6,8 @@
 		  <input type="file" name="document" style="float:left;">
 		  <button class="btn btn-secondary" type="submit" >Upload File</button>
 	</form>
+	{% if url %}
+	<p>Uploaded file: <a href="{{ url }}">{{ url }}</a> </p>
+	{% endif %}
 </div>
 {% endblock %}
