--- a/store/templates/store/upload.html
+++ b/store/templates/store/upload.html
@@ -1,10 +1,13 @@
 {% extends "store/base.html" %}
 {% block content %}
-<div id="main">
-	<form method="post" enctype="multipart/form-data">
-	  {% csrf_token %}
-		  <input type="file" name="document" style="float:left;">
-		  <button class="btn btn-secondary" type="submit" >Upload File</button>
-	</form>
-</div>
+	<div id="main">      
+		<form method="post" enctype="multipart/form-data">
+			{% csrf_token %}
+			<input type="file" name="document" style="float:left;">
+			<button class="btn btn-secondary" type="submit" >Upload File</button>
+		</form>
+		{% if url %}
+			<p>Uploaded file: <a href="{{ url }}">{{ url }}</a> </p>
+		{% endif %}
+	</div>
 {% endblock %}
