post_Detail rating frontend

--- a/store/templates/store/post_detail.html
+++ b/store/templates/store/post_detail.html
@@ -2,9 +2,24 @@
 {% block content %}
 <div id="main">   
 <article class="media content-section">
-  <img class="rounded-circle article-img" src="{{ object.author.profile.image.url }}">
+  <span id="post__">  
+  <img class="post_detail_image"  src="{{ post.image.url }}">
+  <fieldset class="rating">
+    <input type="radio" id="star5" name="rating" value="5" /><label class = "full" for="star5" title="Awesome - 5 stars"></label>
+    <input type="radio" id="star4half" name="rating" value="4 and a half" /><label class="half" for="star4half" title="Pretty good - 4.5 stars"></label>
+    <input type="radio" id="star4" name="rating" value="4" /><label class = "full" for="star4" title="Pretty good - 4 stars"></label>
+    <input type="radio" id="star3half" name="rating" value="3 and a half" /><label class="half" for="star3half" title="Meh - 3.5 stars"></label>
+    <input type="radio" id="star3" name="rating" value="3" /><label class = "full" for="star3" title="Meh - 3 stars"></label>
+    <input type="radio" id="star2half" name="rating" value="2 and a half" /><label class="half" for="star2half" title="Kinda bad - 2.5 stars"></label>
+    <input type="radio" id="star2" name="rating" value="2" /><label class = "full" for="star2" title="Kinda bad - 2 stars"></label>
+    <input type="radio" id="star1half" name="rating" value="1 and a half" /><label class="half" for="star1half" title="Meh - 1.5 stars"></label>
+    <input type="radio" id="star1" name="rating" value="1" /><label class = "full" for="star1" title="Sucks big time - 1 star"></label>
+    <input type="radio" id="starhalf" name="rating" value="half" /><label class="half" for="starhalf" title="Sucks big time - 0.5 stars"></label>
+</fieldset>
+</span>
   <div class="media-body">
     <div class="article-metadata">
+      <img src="{{ object.author.profile.image.url }}" id="profile_icon">
       <a class="mr-2" href="#">{{ object.author }}</a>
       <small class="text-muted">{{ object.date_posted|date:"F d, Y" }}</small>
       <p>
@@ -15,11 +30,16 @@
           <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'post-update' object.id %}">Update</a>
           <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'post-delete' object.id %}">Delete</a>
         </div>
-        
+      {% else %}
+      
+    
+
       {% endif %}
       {{ Lesson }}
     </div>
     <h2 class="article-title">{{ object.title }}</h2>
+
+
     <p class="article-content">{{ object.description|linebreaks }}</p>
   </div>
 </article>
