--- a/store/static/store/main.css
+++ b/store/static/store/main.css
@@ -360,6 +360,48 @@ body {
 }
 
 .rating {
+  float: none;
+  padding: 0;
+  margin: 0;
+}
+
+.rating > input { display: none; } 
+.rating > label:before { 
+  margin: 5px;
+  font-size: 1.56em;
+  font-family: FontAwesome;
+  display: inline-block;
+  content: "\f005";
+}5
+.rating > .half:before { 
+  content: "\f089";
   position: absolute;
-  bottom: 40px;
+}
+
+.rating > label { 
+  color: #ddd; 
+ float: right; 
+}
+
+/***** CSS Magic to Highlight Stars on Hover *****/
+
+.rating > input:checked ~ label, /* show gold star when clicked */
+.rating:not(:checked) > label:hover, /* hover current star */
+.rating:not(:checked) > label:hover ~ label { color: #FFD700;  } /* hover previous stars in list */
+
+.rating > input:checked + label:hover, /* hover current star when changing rating */
+.rating > input:checked ~ label:hover,
+.rating > label:hover ~ input:checked ~ label, /* lighten current selection */
+.rating > input:checked ~ label:hover ~ label { color: #FFED85;  } 
+
+#post__ {
+  height: 180px;
+  width: 200px;
+  overflow: hidden;
+  margin-right: 30px;
+}
+
+#post__ img {
+  height: 120px;
+  width: 200px
 }
