--- a/store/templates/store/user_posts.html
+++ b/store/templates/store/user_posts.html
@@ -84,6 +84,7 @@
       </div>
       <p style="padding: 20px;"></p>
       <div style="padding-top: 20px;" id="main" >
+        <h1 class="mb-3">Post by {{ view.kwargs.username }} ({{ page_obj.paginator.count }})</h1>
       <section class="text-center mb-4">
         <div class="row">    
         {% for post in post %}      
@@ -103,7 +104,7 @@
                     </a>
                   </strong>
                 </div>
-                <a  href="{% url 'user-posts' post.author.username %}" class="author">
+                <a href="{% url 'user-posts' post.author.username %}" class="author">
                   {{ post.author }} 
                 </a>
                 <div class="rating">
