--- a/store/templates/store/post_detail.html
+++ b/store/templates/store/post_detail.html
@@ -20,7 +20,7 @@
   <div class="media-body">
     <div class="article-metadata">
       <img src="{{ object.author.profile.image.url }}" id="profile_icon">
-      <a class="mr-2" href="#">{{ object.author }}</a>
+      <a class="mr-2" href= "{% url 'user-posts' object.author.username %}" >{{ object.author }}</a>
       <small class="text-muted">{{ object.date_posted|date:"F d, Y" }}</small>
       <p>
         <h6> ${{ object.price}} </h6>
