--- a/store/templates/store/user_posts.html
+++ b/store/templates/store/user_posts.html
@@ -68,23 +68,26 @@
   </a>
 </div>
       </div>
-      <div class="panel">
-          <button>
+       <div class="panel">
+          <a href = "{% url 'store-home'%}">
             <img src="/static/store/random.gif" alt="">
             Random Finds
-          </button>
-          <button>
+          </a>
+          <a href="#">
             <img src="/static/store/Subscription.gif" alt="">
             My Subscription
-          </button>
-          <button>
+          </a>
+          <a style="background-color: white; color: rgb(16, 197, 230);">
             <img src="/static/store/content.gif" alt="">
             My Content
-          </button>
+          </a>
       </div>
       <p style="padding: 20px;"></p>
       <div style="padding-top: 20px;" id="main" >
-        <h1 class="mb-3">Post by {{ view.kwargs.username }} ({{ page_obj.paginator.count }})</h1>
+          {% if view.kwargs.username != user.username %}
+        <h1 class="mb-3">Post by {{ view.kwargs.username }} ({{ page_obj.paginator.count }})</h1>  
+          {% endif %}
+        
       <section class="text-center mb-4">
         <div class="row">    
         {% for post in post %}      
