--- a/store/templates/store/user_posts.html
+++ b/store/templates/store/user_posts.html
@@ -77,7 +77,7 @@
             <img src="/static/store/Subscription.gif" alt="">
             My Subscription
           </a>
-          <a style="background-color: white; color: rgb(16, 197, 230);">
+          <a style="background-color: white; color: rgb(16, 197, 230); border-top: solid 2px rgb(16, 197, 230);">
             <img src="/static/store/content.gif" alt="">
             My Content
           </a>
